--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="about" id="about">
         <div class="abt-text">
-            <h2>Welcome to a <span class="grad">Family</span></h2>
+            <h2><span class="grad">Welcome to a Family</span></h2>
             <p>The Chapel Outreach Norwich is a Christian Church serving the Norwich community and seeking, engaging,
                 and encouraging others in their life-changing Christian journey.</p>
             <br>
@@ -80,21 +80,21 @@
                 <p>Join our Sunday Service, where we worship, pray and learn together.</p>
                 <br>
                 <p>Starts at 1PM.</p>
-                <button>More Info</button>
+                <!-- <button>More Info</button> -->
             </div>
             <div class="card c2">
                 <h3>Tuesday Bible Study</h3>
                 <p>Join our Tuesday Services, where we dig into the word of God as a group.</p>
                 <br>
                 <p>Starts at 7PM.</p>
-                <button>More Info</button>
+                <!-- <button>More Info</button> -->
             </div>
             <div class="card c3">
                 <h3>First Friday Prayer</h3>
                 <p>Join our First Friday Prayer Meetings, where we pray for the month ahead. </p>
                 <br>
                 <p>Starts at 9PM.</p>
-                <button>More Info</button>
+                <!-- <button>More Info</button> -->
             </div>
         </div>
         <a class="serv-dtxt" href="#"> See more of our upcoming services 🡪</a>
@@ -126,14 +126,14 @@
         <br>
       <div class="main-text">
         <div class="worker">
-            <h3 class="ginv-head">Become a Worker</h3>
+            <h3 class="ginv-head">Become a Volunteer</h3>
             <p class="ginv-bv">Each one should use whatever gift he has received to serve others, faithfully administering God’s grace in its various forms. - 1 Peter 4:10</h4>
             <p class="ginv-text">Do you want to use the gifts and talent God has given you to serve in the Church? We have various departments for you to choose from!</p>
-            <a href="" class="ginv-link">Become a Worker 🡪</a>
+            <a href="" class="ginv-link">Become a Volunteer 🡪</a>
         </div>
 
         <div class="give">
-            <h3 class="ginv-head">Give</h3>
+            <h3 class="ginv-head">Giving & Donations</h3>
             <p class="ginv-bv">Each one must give as he has decided in his heart, not reluctantly or under compulsion, for God loves a cheerful giver. - 2 Corinthians 9:7</h4>
             <p class="ginv-text">Want to give to the Church to support the day-to-day activities? We have various methods you can use to do so!</p>
             <a href="" class="ginv-link">Give & View Church Accounts 🡪</a>
@@ -151,15 +151,15 @@
         <div class="c-plat">
             <img src="Facebook-icon.svg" alt="">
             <h3>Facebook</h3>
-            <a href="https://facebook.com/rccgtcon"><p>facebook.com/rccgtcon</p></a>
+            <a href="https://facebook.com/rccgtcon">facebook.com/rccgtcon</a>
             <br>
             <img src="email-icon.svg" alt="">
             <h3>Email</h3>
-            <a href="mailto:church@rccgtcon.com"> <p>church@rccgtcon.com</p></a>
+            <a href="mailto:church@rccgtcon.com">church@rccgtcon.com</a>
             <br>
             <img src="phone-number.svg" alt="">
             <h3>Phone Number</h3>
-            <a href="tel:+447578487706"><p>07578 487706</p></a>
+            <a href="tel:+447578487706">07578 487706</a>
         </div>
         </div>
 
