edit so it says volunteer + give

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="nav-links" style="margin-top: 5px;">
                 <a href="#about">About Us</a>
                 <a href="#services">Our Services</a>
-                <a href="#directions">Directions</a>
-                <a href="#ginv">Get Involved</a>
+                <a href="#ginv">Volunteer</a>
+                <a href="#ginv">Give</a>
                 <a href="#contact">Contact Us</a>
             </div>
         </div>
