Add back the header text i removed

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     
             </div>
         </div>
+
+        <div class="header-text">
+            <h1 class="head-text">A Place to call <span style="text-decoration: underline;">home</span></h1>
+            <p class="head-desc">Join our growing, Christ-focused community in our Tuesday, Friday or Sunday Services.
+            </p>
+            <a href="#about"><button class="head-btn">Find out more</button></a>
+        </div>
     </header>
 
     <div class="about" id="about">
