--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="nav-links">
                 <!-- Dropdown menu -->
                 <div class="dropdown">
-                    <a class="dropBtn" href="#">About Us <i class="fas fa-angle-down"></i></a>
+                    <a class="dropBtn" href="/about">About Us <i class="fas fa-angle-down"></i></a>
                     <div class="drop-content">
                         <a href="beliefs.html" >Our Beliefs</a> <a href="mission.html">Our Mission</a>
                     </div>
