add footer to about

--- a/about.html
+++ b/about.html
@@ -86,6 +86,10 @@
                 fellowship but by the grace of God, has grown to become a dynamic worship centre.</p>
         </div>
     </div>
+
+    <footer>
+        <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>   
+      </footer>
 </body>
 
 </html>
