--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://rccgtcon.netlify.app">
 <meta property="og:title" content="RCCG TCON">
 <meta property="og:description" content="Welcome to RCCG The Chapel Outreach parish in Norwich, United Kingdom. We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="https://i.postimg.cc/MZ0t97Zx/meta-img.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://rccgtcon.netlify.app">
 <meta property="twitter:title" content="RCCG TCON">
 <meta property="twitter:description" content="Welcome to RCCG The Chapel Outreach parish in Norwich, United Kingdom. We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="https://i.postimg.cc/MZ0t97Zx/meta-img.png">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTR2W7WDHZ"></script>
 <script>
