Change nav so you can actually see dropdown on mobile

--- a/volunteer.html
+++ b/volunteer.html
@@ -49,9 +49,11 @@
         <div class="nav-links">
             <!-- Dropdown menu -->
             <div class="dropdown">
-                <a class="dropBtn" href="/about">About Us <i class="fas fa-angle-down"></i></a>
+                <a class="dropBtn">About Us <i class="fas fa-angle-down"></i></a>
                 <div class="drop-content">
-                    <a href="/beliefs" >Our Beliefs</a> <a href="/mission">Our Mission</a>
+                    <a href="/about">Our Church</a>
+                    <a href="/beliefs">Our Beliefs</a> 
+                    <a href="/mission">Our Mission</a>
                 </div>
             </div>
 
