--- a/beliefs.html
+++ b/beliefs.html
@@ -35,35 +35,37 @@
 <body>
   <header>
     <div class="navbar">
-        <!-- Navbar logo -->
-        <div class="nav-header">
-            <div class="nav-logo">
-                <img alt="logo" src="rccglogo.png" width="50" style="margin-top: -12px; margin-right: 15px;">
-                <a class="logo-txt" href="/">
-                    RCCG The Chapel Outreach Norwich</a>
-            </div>
-        </div><!-- responsive navbar toggle button -->
-        <input id="nav-check" type="checkbox">
-        <div class="nav-btn">
-            <label for="nav-check"><span></span> <span></span> <span></span></label>
-        </div><!-- Navbar items -->
-        <div class="nav-links">
-            <!-- Dropdown menu -->
-            <div class="dropdown">
-                <a class="dropBtn" href="/about">About Us <i class="fas fa-angle-down"></i></a>
-                <div class="drop-content">
-                    <a href="/beliefs" >Our Beliefs</a> <a href="/mission">Our Mission</a>
-                </div>
-            </div>
+      <!-- Navbar logo -->
+      <div class="nav-header">
+          <div class="nav-logo">
+              <img alt="logo" src="rccglogo.png" width="50" style="margin-top: -12px; margin-right: 15px;">
+              <a class="logo-txt" href="/">
+                  RCCG The Chapel Outreach Norwich</a>
+          </div>
+      </div><!-- responsive navbar toggle button -->
+      <input id="nav-check" type="checkbox">
+      <div class="nav-btn">
+          <label for="nav-check"><span></span> <span></span> <span></span></label>
+      </div><!-- Navbar items -->
+      <div class="nav-links">
+          <!-- Dropdown menu -->
+          <div class="dropdown">
+              <a class="dropBtn">About Us <i class="fas fa-angle-down"></i></a>
+              <div class="drop-content">
+                  <a href="/about">Our Church</a>
+                  <a href="/beliefs">Our Beliefs</a> 
+                  <a href="/mission">Our Mission</a>
+              </div>
+          </div>
 
-            <a href="/services">Our Services</a>
-            <a href="/volunteer">Volunteer</a>
-            <a href="/give">Give</a>
-            <a href="/contact">Contact Us</a>
+          <a href="/services">Our Services</a>
+          <a href="/volunteer">Volunteer</a>
+          <a href="/give">Give</a>
+          <a href="/contact">Contact Us</a>
 
 
-        </div>
-    </div>
+      </div>
+  </div>
     <div class="text">
       <h1>Our Beliefs</h1>
     </div>
