Identify volunteering form

--- a/volunteer.html
+++ b/volunteer.html
@@ -78,7 +78,7 @@
     <p>Please use the form below to submit your application.</p>
 </div>
 
-<form name="contact" method="POST" data-netlify="true" class="contact">
+<form name="volunteer" method="POST" data-netlify="true" class="volunteer">
     <input type="hidden" name="subject" 
     value="New workers form submission from rccgtcon.com" />
       <label>Name</label><br> <input type="text" name="name" placeholder="John Doe" required/>
