update bible feast

--- a/services.html
+++ b/services.html
@@ -116,19 +116,15 @@
                 <p>Every Tuesday</p>
                 <p>7:00PM to 9:00PM</p>
                 <p>RCCG The Chapel Outreach Norwich, Colman Rd, NR4 7HD</p>
-                <img src="img-test.jpg" alt="" width="45%">
+                <img src="bfeast_img.jpeg" alt="" width="45%">
     
               </div>
               <div class="main-info">
-                <p>This is our weekly service where we come together to worship the Lord as a family. We incorporate
-                  worship, praise, Sunday School and a powerful sermon.</p>
-                <p>We begin with Sunday School, where we dig into the Bible enabling people to get a greater understanding
-                  of the Word of God, which is so integral to our faith.</p>
-                <p>We also offer a strong Children’s Church and Youth Ministry, where young people are supported and
-                  encouraged in their walk with God through Bible Lessons, arts and crafts and important skill development.
+                <p>This is our weekly service when we come together to study the Word of God. 
+                </p>
+                <p>In this service, we delve into the bible and try to answer any questions you may have.
                 </p>
                 <p>We hope to see you at our service!</p>
-                <p><i>Please Note: Ministers and workers are expected to be at the venue by 12:00pm</i></p>
               </div>
             </div>
           </section>
