add some links to about

--- a/about.html
+++ b/about.html
@@ -86,6 +86,13 @@
             <p>Pastors Kalu and Theodora are the pastors of The Chapel Outreach Norwich with the support of
                 dedicated ministers and volunteers. The Chapel Outreach Norwich started humbly as a student
                 fellowship but by the grace of God, has grown to become a dynamic worship centre.</p>
+
+                <br><br>
+                <div class="o-links">
+                <a href="/beliefs"><p>Our Beliefs</p></a>
+                <a href="/mission"><p>Our Mission</p></a>
+                <a href="/services"><p>Our Services</p></a>
+            </div>
         </div>
     </div>
 
