change give gradient

--- a/give.html
+++ b/give.html
@@ -11,6 +11,11 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="nav.css">
         <link rel="stylesheet" href="ginv.css">
+        <style>
+            header {
+                background-image: url(https://images.alphacoders.com/102/1026347.jpg);
+            }
+        </style>
         <title>RCCG TCON</title>
     
         <!-- Google tag (gtag.js) -->
