edit style of about + add contact link

--- a/index.html
+++ b/index.html
@@ -96,16 +96,17 @@
     <div class="about" id="about">
         <div class="abt-text">
             <h2><span class="grad">Welcome to a Family</span></h2>
-            <p>The Chapel Outreach Norwich is a Christian Church serving the Norwich community and seeking, engaging,
-                and encouraging others in their life-changing Christian journey.</p>
+            <p>Welcome to the Redeemed Christian Church of God, The Chapel Outreach parish in Norwich, United Kingdom. We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.
+            </p>
             <br>
-            <p>We seek to be a loving, friendly community that worships God, and serves others. We place a high priority
-                on teaching from the Bible and following the example of Jesus.</p>
+            <p>The Chapel Outreach Norwich is a part of the Redeemed Christian Church of God (RCCG). RCCG is a worldwide church organisation established since 1952 with a mandate to take the gospel of salvation to the entire world in line with the Great Commission of our Lord Jesus Christ. The General Overseer of The Redeemed Christian Church of God is Pastor E.A. Adeboye.
+            </p>
             <br>
             <p>Our vision is to impact and renew Norwich and beyond with the transforming message of Jesus Christ
                 through words and actions.</p>
             <br>
-            <p>Come as you are - we'd love to get to know you.</p>
+            <p>Pastors Kalu and Theodora are the pastors of The Chapel Outreach Norwich with the support of dedicated ministers and volunteers. The Chapel Outreach Norwich started humbly as a student fellowship but by the grace of God, has grown to become a dynamic worship centre.
+            </p>
 
         </div>
         <img src="about-img.png" alt="" class="abt-img">
@@ -153,7 +154,7 @@
             <p>Buses 25 and 26 stop just across from the Church, and it’s a short walk from the University.</p>
             <br><br>
             <p>However, if you need to be picked up to come to Church, please let us know using the form <a
-                    href="">here.</a> </p>
+                    href="/contact">here.</a> </p>
         </div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19376.13880917229!2d1.2550692352822623!3d52.623530559358166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9e16012333f13%3A0x4e436a1b6db57dc0!2sRCCG%20The%20Chapel%20Outreach%20Norwich!5e0!3m2!1sen!2suk!4v1663485064381!5m2!1sen!2suk"
