--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a class="dropBtn">About Us <i class="fas fa-angle-down"></i></a>
                     <div class="drop-content">
                         <a href="/about">Our Church</a>
-                        <a href="/beliefs">Our Beliefs</a> 
+                        <a href="/beliefs">Our Beliefs</a>
                         <a href="/mission">Our Mission</a>
                     </div>
                 </div>
@@ -95,17 +95,30 @@
 
     <div class="about" id="about">
         <div class="abt-text">
-            <h2><span class="grad">Welcome to a Family</span></h2>
-            <p>Welcome to the Redeemed Christian Church of God, The Chapel Outreach parish in Norwich, United Kingdom. We have the mandate to build people spiritually and train them to discover, develop and deploy their God given gift to serve God and the community. We provide a lovely and friendly atmosphere where people from the various nations of the world can experience the true love of Christ and understand God's purpose for their lives.
+            <h2><span class="grad">Welcome to the TCON Family</span></h2>
+            <p>Welcome to the Redeemed Christian Church of God, The Chapel Outreach
+                parish in Norwich (TCON), United Kingdom. We have the mandate to build
+                people spiritually and train them to discover, develop and deploy their God
+                given gift to serve God and the community. We provide a lovely and
+                friendly atmosphere where people from the various nations of the world can
+                experience the true love of Christ and understand God's purpose for their
+
+                lives.
             </p>
             <br>
-            <p>The Chapel Outreach Norwich is a part of the Redeemed Christian Church of God (RCCG). RCCG is a worldwide church organisation established since 1952 with a mandate to take the gospel of salvation to the entire world in line with the Great Commission of our Lord Jesus Christ. The General Overseer of The Redeemed Christian Church of God is Pastor E.A. Adeboye.
+            <p>The Chapel Outreach Norwich is a part of the Redeemed Christian Church
+                of God (RCCG). RCCG is a worldwide church organisation established
+                since 1952 with a mandate to take the gospel of salvation to the entire
+                world in line with the Great Commission of our Lord Jesus Christ. The
+                General Overseer of The Redeemed Christian Church of God is Pastor E.A. Adeboye.
             </p>
             <br>
-            <p>Our vision is to impact and renew Norwich and beyond with the transforming message of Jesus Christ
-                through words and actions.</p>
+            <p>Our vision is to impact lives with the transforming message of Jesus Christ through the Word and the Holy Spirit.</p>
             <br>
-            <p>Pastors Kalu and Theodora are the pastors of The Chapel Outreach Norwich with the support of dedicated ministers and volunteers. The Chapel Outreach Norwich started humbly as a student fellowship but by the grace of God, has grown to become a dynamic worship centre.
+            <p>Pastors Kalu and Theodora are the pastors of The Chapel Outreach
+                Norwich with the support of dedicated ministers and volunteers. The
+                Chapel Outreach Norwich started humbly as a student fellowship in March
+                2010, but by the grace of God, has grown to become a dynamic worship centre.
             </p>
 
         </div>
@@ -130,7 +143,7 @@
                 <!-- <button>More Info</button> -->
             </div>
             <div class="card c3">
-                <h3>First Friday Prayer</h3>
+                <h3>First Friday Ignite Prayer</h3>
                 <p>Join our First Friday Prayer Meetings, where we pray for the month ahead. </p>
                 <br>
                 <p>Starts at 9PM.</p>
