--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
         <label for="tab2">Bible Study</label>
         <!-- Tab 3 -->
         <input type="radio" name="tabset" id="tab3" aria-controls="f-prayer">
-        <label for="tab3">First Friday Prayer Meeting</label>
+        <label for="tab3">First Friday Ignite Prayer</label>
         <!--Tab 4-->
         <input type="radio" name="tabset" id="tab4" aria-controls="bible-feast">
         <label for="tab4">Bible Feast</label>
@@ -132,7 +132,7 @@
             <div class="tab-info" style="display: flex;">
               <img src="" alt="">
               <div class="side-info">
-                <h2>First Friday of the Month Prayer Meeting</h2>
+                <h2>First Friday Ignite Prayer</h2>
                 <p>Every First Friday of the Month</p>
                 <p>9:00PM to 11:00PM</p>
                 <p>RCCG The Chapel Outreach Norwich, Colman Rd, NR4 7HD</p>
