--- a/volunteer.html
+++ b/volunteer.html
@@ -89,8 +89,8 @@
       <br>
       <label>What departments would you like to help out in?</label> <br>
       <div class="checkboxes">
-      <input type="checkbox" id="item1" name="Children" value="Children's Church">
-      <label for="item1">Children's Church</label><br>
+      <input type="checkbox" id="item1" name="Children" value="Children & Teens Church">
+      <label for="item1">Children & Teens Church</label><br>
       <input type="checkbox" id="item2" name="Multimedia" value="Multimedia and IT">
       <label for="item2">Multimedia and IT</label><br>
       <input type="checkbox" id="item3" name="Choir" value="Choir">
@@ -107,8 +107,12 @@
       <label for="item8">Evangelism</label><br>
          <input type="checkbox" id="item9" name="Ushering" value="Ushering">
       <label for="item9">Ushering </label><br>
-         <input type="checkbox" id="item10" name="Other" value="Other">
-      <label for="item10">Other</label><br> 
+      <input type="checkbox" id="item10" name="Community" value="Community Projects">
+      <label for="item10">Community Projects</label><br> 
+         <input type="checkbox" id="item11" name="Other" value="Other">
+      <label for="item11">Other</label><br> 
+
+
     </div>
     <label>If you selected other, please let us know which department you'd like to help in:</label><br> <input type="text" name="otherdept"/>
 <br>
