--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
                 people spiritually and train them to discover, develop and deploy their God
                 given gift to serve God and the community. We provide a lovely and
                 friendly atmosphere where people from the various nations of the world can
-                experience the true love of Christ and understand God's purpose for their
-
-                lives.
+                experience the true love of Christ and understand God's purpose for their lives.
             </p>
             <br>
             <p>The Chapel Outreach Norwich is a part of the Redeemed Christian Church
