Update Navbar + add gallery page

--- a/about.html
+++ b/about.html
@@ -58,13 +58,18 @@
                         <a href="/mission">Our Mission</a>
                     </div>
                 </div>
-
-                <a href="/services">Our Services</a>
+                <div class="dropdown">
+                    <a class="dropBtn">Our Services <i class="fas fa-angle-down"></i></a>
+                    <div class="drop-content">
+                        <a href="/services">Service Information</a>
+                        <a href="/gallery">Photo Gallery</a>
+                    </div>
+                </div>
                 <a href="/volunteer">Volunteer</a>
                 <a href="/give">Give</a>
                 <a href="/contact">Contact Us</a>
-
-
+    
+    
             </div>
         </div>
         <div class="text">
