--- a/gallery.html
+++ b/gallery.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="rccglogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="mission.css">
+    <link rel="shortcut icon" href="./rccglogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./nav.css">
+    <link rel="stylesheet" href="./gallery.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>RCCG TCON</title>
-
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTR2W7WDHZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -22,19 +18,18 @@
 
   gtag('config', 'G-YTR2W7WDHZ');
 </script>
-
     <!-- Microsoft Clarity Code (Analytics) -->
     <script type="text/javascript">
-        (function (c, l, a, r, i, t, y) {
-            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "dw5f2vozqv");
-    </script>
+      (function (c, l, a, r, i, t, y) {
+          c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+          t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+          y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "dw5f2vozqv");
+  </script>
 </head>
 <body>
-  <header>
-    <div class="navbar">
+    <header>
+      <div class="navbar">
         <!-- Navbar logo -->
         <div class="nav-header">
             <div class="nav-logo">
@@ -72,20 +67,9 @@
         </div>
     </div>
     <div class="text">
-      <h1>Our Mission</h1>
+      <h1 class="head-txt">Photo Galery</h1>
     </div>
 </header>
-<div class="statements">
-    <p>1. To make heaven.</p>
-    <p>2. To take as many people with us.</p>
-    <p>3. To have a member of RCCG in every family of all nations.</p>
-    <p>4. To accomplish No. 1 above, holiness will be our lifestyle.</p>
-    <p>5. To accomplish No. 2 and 3 above, we will plant churches within five minutes walking distance in every city and town of developing countries and within five minutes driving distance in every city and town of developed countries.  </p>
-    <p>6. We will pursue these objectives until every Nation in the world is reached for the Lord Jesus Christ</p>
-</div>
-<footer>
-  <p>© 2022 -  The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788 </p>   
-</footer>
-
+    
 </body>
 </html>
