--- a/index.html
+++ b/index.html
@@ -72,17 +72,22 @@
                     <a class="dropBtn">About Us <i class="fas fa-angle-down"></i></a>
                     <div class="drop-content">
                         <a href="/about">Our Church</a>
-                        <a href="/beliefs">Our Beliefs</a>
+                        <a href="/beliefs">Our Beliefs</a> 
                         <a href="/mission">Our Mission</a>
                     </div>
                 </div>
-
-                <a href="/services">Our Services</a>
+                <div class="dropdown">
+                    <a class="dropBtn">Our Services <i class="fas fa-angle-down"></i></a>
+                    <div class="drop-content">
+                        <a href="/services">Service Information</a>
+                        <a href="/gallery">Photo Gallery</a>
+                    </div>
+                </div>
                 <a href="/volunteer">Volunteer</a>
                 <a href="/give">Give</a>
                 <a href="/contact">Contact Us</a>
-
-
+    
+    
             </div>
         </div>
         <div class="header-text">
