start the process of photos

--- a/about.html
+++ b/about.html
@@ -97,6 +97,7 @@
                 <a href="/beliefs"><p>Our Beliefs</p></a>
                 <a href="/mission"><p>Our Mission</p></a>
                 <a href="/services"><p>Our Services</p></a>
+                <a href="/gallery"><p>Photo Gallery</p></a>
             </div>
         </div>
     </div>
