--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,27 @@
       <h1 class="head-txt">Photo Galery</h1>
     </div>
 </header>
+
+<div class="content">
+    <div class="main-text">
+        <h2>Photos</h2>
+        <br><br>
+        <p>Below are various photos from our services.</p>
+    </div>
+</div>
+
+<div class="photos">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+    <img src="" alt="" class="photo">
+</div>
     
 </body>
 </html>
