replace most stock images with normal images

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </p>
 
         </div>
-        <img src="about-img.png" alt="" class="abt-img">
+        <img src="photos/about-image.png" alt="" class="abt-img">
     </div>
 
     <div class="services" id="services">
