--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@
                 <p>Every Sunday</p>
                 <p>1:00PM to 3:00PM</p>
                 <p>RCCG The Chapel Outreach Norwich, Colman Rd, NR4 7HD</p>
-                <img src="img-test.jpg" alt="" width="45%">
+                <img src="photos/about-image.png" alt="" width="45%">
     
               </div>
               <div class="main-info">
