--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,13 @@
       <img src="/photos/IMG_0054_edited.jpeg" style="width:100%">
       <img src="/photos/IMG_0048_edited.jpeg" style="width:100%">
     </div>
-  </div>
-  
+</div>
+<br><br><br>
+  <footer>
+    <p>© 2022 - The Redeemed Christian Church of God, The Chapel Outreach Norwich | Charity Commission No. 1158788
+    </p>
+
+</footer>
+
 </body>
 </html>
